# fabric-shell

./: .gitignore  config.yaml  pyproject.toml
fabric_shell/: config.py  helpers.py  logger.py  main.py
fabric_shell/services/: backlight.py
